stages/stage2/k8s/apps/flight/flight-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight
  namespace: apollo-airlines-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flight
  template:
    metadata:
      labels:
        app: flight
    spec:
      serviceAccountName: apollo11-apps
      containers:
        - name: flight
          image: apollo11/flight:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
