stages/stage2/k8s/apps/flight/flight-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flight
  namespace: apollo-airlines-apps
spec:
  selector:
    app: flight
  ports:
    - port: 8081
      targetPort: 8081
